<resources>
    <string name="app_name">NanoDegreeAppLauncher</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_streamer_text">SPOTIFY STREAMER</string>
    <string name="scores_app_text">SCORES APP</string>
    <string name="library_app_text">LIBRARY APP</string>
    <string name="build_it_bigger_app_text">BUILD IT BIGGER</string>
    <string name="xyz_reader_text">XYZ READER</string>
    <string name="capstone_text">CAPSTONE: MY OWN APP</string>
    <string name="heading_text">MY APP LAUNCHER</string>
</resources>
