<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.android.yadavv.nanodegreeapplauncher.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/heading_text"
        android:id="@+id/textView"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer_text"
        android:id="@+id/spotify_streamer"
        android:layout_below="@+id/textView"
        android:layout_marginTop="15dp"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:background="#F08C35"
        android:clickable="true"
        android:enabled="true"
        android:onClick="sendMessage"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scores_app_text"
        android:id="@+id/score_app"
        android:background="#F08C35"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/spotify_streamer"
        android:layout_alignEnd="@+id/spotify_streamer"
        android:layout_alignStart="@id/spotify_streamer"
        android:clickable="true"
        android:enabled="true"
        android:onClick="sendMessage" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/library_app_text"
        android:background="#F08C35"
        android:layout_marginTop="15dp"
        android:id="@+id/library_app"
        android:layout_below="@+id/score_app"
        android:layout_alignEnd="@+id/score_app"
        android:layout_alignStart="@+id/score_app"
        android:clickable="true"
        android:enabled="true"
        android:onClick="sendMessage" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger_app_text"
        android:background="#F08C35"
        android:layout_marginTop="15dp"
        android:id="@+id/build_it_bigger_app"
        android:layout_below="@id/library_app"
        android:layout_alignStart="@+id/library_app"
        android:layout_alignEnd="@+id/library_app"
        android:clickable="true"
        android:enabled="true"
        android:onClick="sendMessage" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader_text"
        android:background="#F08C35"
        android:layout_marginTop="15dp"
        android:id="@+id/xyz_app"
        android:layout_below="@+id/build_it_bigger_app"
        android:layout_alignStart="@+id/build_it_bigger_app"
        android:layout_alignEnd="@+id/build_it_bigger_app"
        android:clickable="true"
        android:enabled="true"
        android:onClick="sendMessage" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone_text"
        android:background="#F08C35"
        android:layout_marginTop="15dp"
        android:id="@+id/capstone_app"
        android:layout_below="@+id/xyz_app"
        android:layout_alignEnd="@+id/xyz_app"
        android:layout_alignStart="@+id/xyz_app"
        android:clickable="true"
        android:enabled="true"
        android:onClick="sendMessage"
        />

</RelativeLayout>
